// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: Component should render correctly 1`] = `
<styled.div>
  <Component
    autoWidth={false}
    error={false}
    handleChange={[Function]}
    iconComponent={null}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
</styled.div>
`;

exports[`TextInput: Component should render edit icon 1`] = `
<styled.div>
  <Component
    autoWidth={false}
    error={false}
    handleChange={[Function]}
    iconComponent={
      <ForwardRef(styled.div)
        isLabel={false}
      >
        <Unknown />
      </ForwardRef(styled.div)>
    }
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
</styled.div>
`;

exports[`TextInput: Component should render error 1`] = `
<styled.div>
  <Component
    autoWidth={false}
    error={true}
    handleChange={[Function]}
    iconComponent={null}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
  <styled.div
    isAuthWidth={false}
    isLabel={false}
  >
    An error message
  </styled.div>
</styled.div>
`;
